<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DALI102Parameters" Id="{b2ce86f1-dd21-4bc2-8fc0-1b833db41f95}">
    <Declaration><![CDATA[TYPE ST_DALI102Parameters :
STRUCT
	nShortAddress			:	BYTE; // 255: no short address
	nActualLevel			:	BYTE;
	nMinLevel				:	BYTE;
	nMaxLevel				: 	BYTE;
	eFadeRate				:	E_DALIFadeRate;
	eFadeTime				:	E_DALIFadeTime;
	nPowerOnLevel			:	BYTE;
	nSystemFailureLevel		:	BYTE;
	nPhysicalMinimum		:	BYTE;
	sDeviceTypes			:	STRING[100];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>